--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,8 @@ jobs:
 
     steps:
       - checkout
-
+      - run: pwd
+      - run: ls -alrt
       # Download and cache dependencies
       - restore_cache:
           keys:
